syntax = "proto3";

option java_package = "app.dissipate.grpc";
option java_outer_classname = "AccountService";
option optimize_for = SPEED;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package beer;

service AccountService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc CreateHandle(CreateHandleRequest) returns (Handle) {}
}

enum AccountStatus{
  Active = 0;
  Disabled = 1;
  Deleted = 2;
}

message Account {
  Timestamp created = 1;
  Timestamp lastLogin = 2;
  Account status = 3;
}

message Handle {
  string id = 1;
  string handle = 2;
  Timestamp created = 3;
  Timestamp lastSeen = 5;
}

message CreateHandleRequest {
  string handle = 2;
}

message RegisterRequest {
}

message RegisterResponse {
  Account account = 1;
  repeated Handle handles = 2;
}


