syntax = "proto3";

option java_package = "app.dissipate.grpc";
option java_outer_classname = "DissipateProtos";
option optimize_for = SPEED;
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
// import "buf/validate/validate.proto";

service DissipateService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc CreateHandle(CreateHandleRequest) returns (CreateHandleResponse) {}
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse) {}
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse) {}
  rpc RunEtlLocation(RunEtlLocationRequest) returns (RunEtlLocationResponse) {}
}

enum AccountStatus {
  ACCOUNT_STATUS_ACTIVE = 0;
  ACCOUNT_STATUS_DISABLED = 1;
  ACCOUNT_STATUS_SUSPENDED = 2;
  ACCOUNT_STATUS_BANNED = 3;
}

message ApiError {
  string code = 1;
  string message = 2;
}

message CreateHandleRequest {
  string handle = 1;
}

message CreateHandleResponse {
  string id = 1;
  string handle = 2;
  google.protobuf.Timestamp created = 3;
  google.protobuf.Timestamp last_seen = 4;
}

message GetSessionRequest {
}

message GetSessionResponse {
  string sid = 1;
  string handle = 2;
  AccountStatus status = 3;
  google.protobuf.Timestamp created = 4;
  google.protobuf.Timestamp last_seen = 5;
}

message RegisterRequest {
  optional string email = 1;
  optional string phone_number = 2;
}

enum RegisterResponseResult {
  Error = 0;
  SessionCreated = 1;
  EmailSent = 2;
  PhoneSent = 3;
}

message RegisterResponse {
  RegisterResponseResult result = 1;

  optional string sid = 2;
  optional ApiError error = 3;
}

message RunEtlLocationRequest {
}

message RunEtlLocationResponse {
}

message ValidateSessionRequest {
  /*
  string sid = 1 [(buf.validate.field).cel = {
    id: "sid"
    expression: "this.matches('^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$') ? null: 'ValidateSessionRequest.sid.invalid'"
  }];
  string otp = 2 [(buf.validate.field).cel = {
    id: "otp"
    expression: "this.matches('^[0-9A-Za-z]{6}$') ? null: 'ValidateSessionRequest.otp.invalid'"
  }];
   */
  string sid = 1;
  string otp = 2;
}

message ValidateSessionResponse {
  bool valid = 1;
  optional string error_message = 2;
}

